# ML-Project

./: sample.ipynb
real-time-ml-system-cohort-1/: Makefile  Readme.md  twofish-0.3.0-cp38-cp38-linux_x86_64.whl
real-time-ml-system-cohort-1/docker-compose/: Makefile  backfill_pipeline.yml  feature_pipeline.yml  redpanda.yml
real-time-ml-system-cohort-1/services/feature_dashboard/: Makefile  live.env  pyproject.toml
real-time-ml-system-cohort-1/services/feature_dashboard/src/: backend.py  config.py  frontend.py  plot.py
real-time-ml-system-cohort-1/services/kafka_to_feature_store/: Makefile  dockerfile  historical.env  live.env  pyproject.toml
real-time-ml-system-cohort-1/services/kafka_to_feature_store/src/: config.py  hopsworks_api.py  main.py
real-time-ml-system-cohort-1/services/tools/: Makefile  live.env  pyproject.toml
real-time-ml-system-cohort-1/services/tools/tools/: config.py  ohlc_data_writer.py
real-time-ml-system-cohort-1/services/trade-producer/: Makefile  dockerfile  historical.env  live.env  pyproject.toml
real-time-ml-system-cohort-1/services/trade-producer/src/: config.py  kraken_api.py  main.py
real-time-ml-system-cohort-1/services/trade-producer/src/Kraken_api/: rest.py  trade.py  websocket.py
real-time-ml-system-cohort-1/services/trade_to_ohlc/: .gitignore  Makefile  dockerfile  historical.env  live.env  pyproject.toml
real-time-ml-system-cohort-1/services/trade_to_ohlc/src/: config.py  main.py
real-time-ml-system-cohort-3/docker-compose/: Makefile  redpanda.yml  technical_indicator_pipeline.yml
